--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "react-native": false
   },
   "dependencies": {
+    "babel-loader": "^6.2.10",
     "babel-runtime": "^6.11.6",
+    "imports-loader": "^0.7.0",
+    "react-native": "^0.40.0",
+    "webpack": "^1.14.0",
     "ws": "^1.0.1",
     "xmlhttprequest": "^1.7.0"
   },
@@ -37,11 +41,13 @@
     "babel-plugin-flow-comments": "^1.0.9",
     "babel-plugin-inline-package-json": "~2.0.0",
     "babel-plugin-minify-dead-code-elimination": "0.0.2",
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.13.0",
+    "babelrc-rollup": "^3.0.0",
     "browserify": "^11.0.1",
     "codecov.io": "^0.1.6",
     "gulp": "^3.9.0",
@@ -53,6 +59,12 @@
     "gulp-uglify": "^1.4.0",
     "jasmine-reporters": "~1.0.0",
     "jest-cli": "^15.1.1",
+    "rollup": "^0.40.2",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^7.0.0",
+    "rollup-plugin-node-globals": "^1.1.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-replace": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
